--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <provider
             android:name=".Data.RecordingsProvider"
-            android:authorities="com.example.tanmay.soundrecorder"
+            android:authorities="com.example.tanmay.soundrecorder.Data.RecordingsProvider"
             android:exported="false" />
 
         <activity android:name=".Actvities.SettingsActivity" />
