Building CursorAdapter to display saved recordings Also removed custom low quality bitrate settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- Adding custom service to manifest -->
+
+        <!-- Service to record audio -->
         <service android:name=".Services.RecordingService" />
 
         <provider
